--- a/src/view/components/Cards/cards.scss
+++ b/src/view/components/Cards/cards.scss
@@ -1,3 +1,6 @@
+@use "../../../sass/variables.scss" as *;
+@use "../../../sass/mixins.scss" as *;
+
 .cards-featured-merch {
   height: 500px;
   width: 320px;
