--- a/src/view/components/Buttons/buttons.scss
+++ b/src/view/components/Buttons/buttons.scss
@@ -1,3 +1,6 @@
+@use "../../../sass/variables.scss" as *;
+@use "../../../sass/mixins.scss" as *;
+
 .button-submit {
   border: none;
   background-color: #2a838d;
