--- a/src/view/pages/Home/home.scss
+++ b/src/view/pages/Home/home.scss
@@ -1,13 +1,34 @@
-@import "./Header/header.scss";
-@import "./Merchandise/merchandise.scss";
-@import "./FeaturedMerchandise/featuredMerchandise.scss";
+@use "../../../sass/variables.scss" as *;
+@use "../../../sass/mixins.scss" as *;
+@use "./Header/header.scss";
+@use "./Merchandise/merchandise.scss";
+@use "./FeaturedMerchandise/featuredMerchandise.scss";
 
+// Modern Home Page Layout
 .home-main {
-  max-width: $standard-max-width;
-  margin: auto;
+  background: $background;
 
   .home-main-padded {
-    margin: 0 20px;
-    padding-bottom: 70px;
+    @include container;
+    padding-top: $spacing-16;
+    padding-bottom: $spacing-20;
+
+    @include mobile-only {
+      padding-top: $spacing-8;
+      padding-bottom: $spacing-12;
+    }
+  }
+}
+
+// Improve spacing between sections
+.home-main-padded > * {
+  margin-bottom: $spacing-16;
+
+  @include mobile-only {
+    margin-bottom: $spacing-12;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
   }
 }
